--- a/KUSYS-Demo/Views/Student/AddUpdateStudent.cshtml
+++ b/KUSYS-Demo/Views/Student/AddUpdateStudent.cshtml
@@ -6,8 +6,8 @@
     else
         ViewData["Title"] = "Update Student";
 }
-
-<form action="/Student/AddUpdateStudent" method="post">
+@using (Html.BeginForm("AddUpdateStudent", "Student", FormMethod.Post))
+{
     <div class="form-row">
         <div class="form-group col-md-12">
             <h4>You can use this page to add/update a student</h4>
@@ -19,24 +19,27 @@
         <div class="col-md-6 mb-3">
             @Html.LabelFor(x=>x.FirstName)
             @Html.TextBoxFor(x=>x.FirstName,Model.FirstName,new {@class="form-control", @required  = "required"})
+            @Html.ValidationMessageFor(x=>x.FirstName,"",new {@class="text-danger"})
         </div>
         <div class="col-md-6 mb-3">
             @Html.LabelFor(x=>x.LastName)
             @Html.TextBoxFor(x=>x.LastName,Model.LastName,new {@class="form-control", @required  = "required"})
+            @Html.ValidationMessageFor(x=>x.LastName,"",new {@class="text-danger"})
         </div>
     </div>
     <div class="form-row">
         <div class="form-group col-md-12">
             @Html.LabelFor(x=>x.BirthDate)
             @Html.EditorFor(x => x.BirthDate,new { htmlAttributes = new { @class = "form-control" ,@value=Model.BirthDate.Date.ToString("dd.MM.yyyy"), @required  = "required"} ,maxlength = 10})
+            @Html.ValidationMessageFor(x=>x.BirthDate,"",new {@class="text-danger"})
         </div>
     </div>
     <div class="form-row">
         <div class="form-group col-md-12">
             @Html.LabelFor(x=>x.CourseId,"Select Course")
             @Html.DropDownListFor(x=>x.CourseId,(List<SelectListItem>)ViewData["StudentSelectList"],new {@class="form-control", @required  = "required"})
-
+            @Html.ValidationMessageFor(x=>x.CourseId,"",new {@class="text-danger"})
         </div>
     </div>
     <button type="submit" class="btn btn-primary submit mb-4">Save</button>
-</form>
+}
